--- a/Atm/Atm/Properties/launchSettings.json
+++ b/Atm/Atm/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Atm": {
+    "Atm.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
